--- a/projects_index_block.html
+++ b/projects_index_block.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta content="authenticity_token" name="csrf-param" />
-    <meta content="0z7+zY8EuNPQOSUT8jqxxDvKAQoeKG5PM0gEpm8phGs=" name="csrf-token" />
+    <meta content="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" name="csrf-token" />
     <meta charset='utf-8'>
     <meta content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>treetree - Deploy</title>
@@ -60,7 +60,7 @@
 </div>
 
 <div class='container clearfix'>
-    <div class="flash flash--spaced flash--success"><p>Your profile has been updated successfully!</p></div>
+
     <div class='flash flash--notice flash--spaced'>
         <p class='flash__close'><a class="flash__close-link" data-dismiss=".flash" data-method="post" href="/users/3471e5ea-a920-5641-1ed9-16609e345521/hide_notice" rel="nofollow" title="Hide this message">Hide</a></p>
         <h3 class='g-heading-gamma'>Deploy 2.0 is coming...</h3>
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class='clearfix'>
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_sort_preference" class="order-preference" id="user_project_sort" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="0z7+zY8EuNPQOSUT8jqxxDvKAQoeKG5PM0gEpm8phGs=" /></div><div class='action-block clearfix'>
+        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_sort_preference" class="order-preference" id="user_project_sort" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div><div class='action-block clearfix'>
             <div class='action-block__sort radio-block js-project-sort'>
                 <strong class='radio-block__label'>Sort:</strong>
                 <label class="radio-block__group" for="user_alphabetic_sort_true"><input class="radio-block__input" id="user_alphabetic_sort_true" name="user[alphabetic_sort]" type="radio" value="true" />
@@ -88,38 +88,40 @@
         </div>
         </form>
 
-        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_view_preference" class="edit_user" id="user_project_view" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="0z7+zY8EuNPQOSUT8jqxxDvKAQoeKG5PM0gEpm8phGs=" /></div><ul class='view-preference layout-list clearfix box'>
+        <form accept-charset="UTF-8" action="/users/3471e5ea-a920-5641-1ed9-16609e345521/projects_view_preference" class="edit_user" id="user_project_view" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="patch" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div><ul class='view-preference layout-list clearfix box'>
             <li class='view-preference__item'>
-                <a class="view-preference__link is-active js-view-preference" href="#"><img alt="Icon list table white" class="view-preference__icon" src="/assets/icon-list-table-white-e2352963a3a7c08ec0400d2997e902b1.svg" /></a>
-                <input checked="checked" class="is-hidden" id="user_compact_view_true" name="user[compact_view]" type="radio" value="true" />
+                <a class="view-preference__link  js-view-preference" href="#"><img alt="Icon list table" class="view-preference__icon" src="/assets/icon-list-table-1d3083531e7d60e4677a1f896aa3e3cb.svg" /></a>
+                <input class="is-hidden" id="user_compact_view_true" name="user[compact_view]" type="radio" value="true" />
             </li>
             <li class='view-preference__item'>
-                <a class="view-preference__link  js-view-preference" href="#"><img alt="Icon list block" class="view-preference__icon" src="/assets/icon-list-block-ba480b0d15bf0c7c15670c0dd3b154f9.svg" /></a>
-                <input class="is-hidden" id="user_compact_view_false" name="user[compact_view]" type="radio" value="false" />
+                <a class="view-preference__link is-active js-view-preference" href="#"><img alt="Icon list block white" class="view-preference__icon" src="/assets/icon-list-block-white-f9dfb5ef9ca2d4b6f399d1e61e04c048.svg" /></a>
+                <input checked="checked" class="is-hidden" id="user_compact_view_false" name="user[compact_view]" type="radio" value="false" />
             </li>
         </ul>
         </form>
 
     </div>
-    <div class='box section section--equal'>
-        <table class='table'>
-            <thead>
-            <td class='u-text-left'>Name</td>
-            <td class='u-text-center'>Deployments</td>
-            <td class='u-text-center'>Servers</td>
-            <th></th>
-            </thead>
-            <tbody class='js-project-list'>
-            <tr class='js-project' data-last-deployed='1421375057' data-name='DeepPHPOOP'>
-                <td><a class="u-text-link" href="/projects/deepphpoop">DeepPHPOOP</a></td>
-                <td class='u-text-center'>1</td>
-                <td class='u-text-center'>1</td>
-                <td class='u-text-center'><a class="text--positive text--semibold" href="/projects/deepphpoop/deployments/new">Deploy &#8594;</a></td>
-            </tr>
+    <ul class='project-listings layout-list clearfix js-project-list'>
+        <li class='project-listing js-project' data-last-deployed='1420966178' data-name='DeepPHPOOP'>
+            <div class='box'>
+                <h3 class='g-heading-beta project-listing__name'><a href="/projects/deepphpoop">DeepPHPOOP</a></h3>
+                <div class='project-listing__bar'>
+                    <div class='project-listing__deployments'>
+                        <span class='project-listing__count'>3</span>
+                        <span class='project-listing__count-title'>Deployments</span>
+                    </div>
+                    <div class='project-listing__servers'>
+                        <span class='project-listing__count'>1</span>
+                        <span class='project-listing__count-title'>Servers</span>
+                    </div>
+                    <div class='project-listing__deploy'>
+                        <a class="project-listing__deploy-button" href="/projects/deepphpoop/deployments/new">Deploy</a>
+                    </div>
+                </div>
+            </div>
+        </li>
 
-            </tbody>
-        </table>
-    </div>
+    </ul>
 
 </div>
 <div class='footer'>
@@ -165,7 +167,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Report Bug</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Report Bug</h2>
-                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="0z7+zY8EuNPQOSUT8jqxxDvKAQoeKG5PM0gEpm8phGs=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/report_bug" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <input id="url" name="url" type="hidden" value="https://treetree.beta.deployhq.com/projects?action=index&amp;controller=projects" />
                         <div class='form-group'>
                             <label class="form-label" for="description">Describe Problem</label>
@@ -187,7 +189,7 @@
                 <a class="feedback-list__link js-feedback-form" href="#">Feedback</a>
                 <div class='feedback-bar__form'>
                     <h2 class='form-heading g-heading-gamma'>Submit Feedback</h2>
-                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="0z7+zY8EuNPQOSUT8jqxxDvKAQoeKG5PM0gEpm8phGs=" /></div>
+                    <form accept-charset="UTF-8" action="/feedback/feedback" class="js-feedback" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="laBOjZbXcHz2Vlufb95oRysGrNnebQP1pBO7NWuJXns=" /></div>
                         <div class='form-group'>
                             <label class="form-label" for="summary">What do you think?</label>
 <textarea class="textarea" id="description" name="description" rows="6">
@@ -207,7 +209,7 @@
 </div>
 
 <script src="/assets/cdn.viaduct.io/webpush.js"></script>
-<script src="/assets/application-36a1ba75c38221091c45f7f70ae55880.js"></script>
+<script src="/assets/application-4490436fc5ec79a05e570d20adf462b5.js"></script>
 <script>
     //<![CDATA[
     window.Utility || (window.Utility = {});
@@ -229,12 +231,12 @@
     atechIdentity.host = 'http://pt.justdeployit.com';
     atechIdentity.userKey = '3b2662a4-843b-798f-417b-5755dda2e195';
     atechIdentity.applicationKey = '2a9869df-7c90-3f32-0538-0bec6f4c4129';
-    atechIdentity.expiry = 1421658027;
-    atechIdentity.authHash = '4d6990f5fe63535814282f065edf5dc8af24ff32';
+    atechIdentity.expiry = 1421306605;
+    atechIdentity.authHash = '3b97bbf9a47cf35e73aa58f1f031654b9b37ca4b';
     atechIdentity.getRemoteUserData();
     //]]>
 </script>
 
-<!--- Version 0d77b0, served by vdtapp-531-9267-dfec860c4c -->
+<!--- Version 4f2bf0, served by vdtapp-531-9174-0e671c801d -->
 </body>
 </html>
